Added all users get route
